fix next and prev arrows on mobile (size, position)

--- a/main.css
+++ b/main.css
@@ -1003,7 +1003,8 @@ footer {
   }
 
   .next-arrow, .previous-arrow {
-    transform: translateY(-30vh);
+    transform: translateY(-30vw);
+    height: 35px;
   }
 
   .smoke-img, .s-clover .item-bg {
